--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 body, html{
     margin: 0;
     padding: 0;
-    font-family: "Merriweather", serif;
+    font-family: "Montserrat", serif;
     font-weight: 400;
     font-style: normal;
 }
@@ -17,6 +17,7 @@ body, html{
     display: flex;
     align-items: center;
     padding: 2%;
+
 }
 .lighter{
     background-color: #E0E2ED;
@@ -149,9 +150,9 @@ hr{
     border-top: 1px solid #E0E2ED;
     cursor: pointer;
     background-color: #313D41;
-    font-family: "Playfair Display", serif;
     display: inline-flex;
     justify-content: space-between;
+    font-family: "Montserrat", serif;
 }
 .dropdown-btn:focus {
     outline: none;
@@ -180,6 +181,7 @@ hr{
     width: 50%;
     position: sticky;
     top: 0;  /* Element will stick to the top of its containing block */
+    text-align: left;
     
 }
 .flexs{
@@ -247,7 +249,16 @@ hr{
 .footer .navs{
     padding: 5px 0;
 }
+.footer a{
+    text-decoration: none; color: #E0E2ED;
+}
+.footer a:hover{
+    text-decoration: underline;
+}
 @media screen and (max-width: 768px){
+    body{
+        width: 100%;
+    }
     .logonav nav{
         display:none;      
     }
@@ -280,7 +291,16 @@ hr{
         position: relative;
     }
 }
+@media screen and (max-width: 320px) {
+    .title {
+        position: relative;
+    }
+    body{
+        width: 100%;
+    }
+}
+
 body.no-scroll {
     overflow: hidden;
-    padding-right: 17px;
   }
+  
