--- a/style.css
+++ b/style.css
@@ -310,8 +310,8 @@ canvas{
     flex: 1 1 50%; /* Each div takes up 50% of the row */
     box-sizing: border-box; /* Ensures padding/margins don't cause overflow */
     width: 50%;
+    padding: 10px 0;
 }
-/* From Uiverse.io by joe-watson-sbf */ 
 .card {
     width: 50%;
     flex: 1 1 50%; /* Each div takes up 50% of the row */
@@ -324,8 +324,7 @@ canvas{
     padding: .4em;
     
   }
-  
-  .card p {
+  .card a {
     height: 100%;
     flex: 1;
     overflow: hidden;
@@ -339,11 +338,10 @@ canvas{
     align-items: center;
   }
   
-  .card p:hover {
+  .card a:hover {
     flex: 4;
   }
-  
-  .card p span {
+  .card a span {
     min-width: 14em;
     padding: .5em;
     text-align: center;
@@ -352,11 +350,21 @@ canvas{
     text-transform: uppercase;
     color: #ECF0F1;
     letter-spacing: .1em;
+    font-size: 18px;
   }
-  
-  .card p:hover span {
+  .card a:hover span {
     transform: rotate(0);
   }
+.card a {
+    text-decoration: none;
+}
+.categ img{
+    width: 100px;
+    height: 100px;
+    object-fit: cover;
+    margin: 10px;
+
+}
 @media screen and (max-width: 768px){
     body{
         width: 100%;
@@ -393,8 +401,22 @@ canvas{
         position: relative;
     }
     .categ, .card{
+        display: block;
         width: 100%;
         flex: 1 1 100%; 
+    }
+    .card a span{
+        transform: rotate(0);
+        -webkit-transform: rotate(0);
+        -moz-transform: rotate(0);
+        -ms-transform: rotate(0);
+        -o-transform: rotate(0);
+    }
+    .card a {
+        margin: 20px 0;
+    }
+    .categ h2{
+        margin: 0px 10px;
     }
 }
 body.no-scroll {
