--- a/style.css
+++ b/style.css
@@ -134,6 +134,7 @@ img {
     text-align: left;
     font-size:small;
     font-size: 25px;
+    padding: 20px;
 }
 .chartcon{
     width: 33.33%;
@@ -299,13 +300,11 @@ canvas{
     background-color:#ECF0F1;
 }
 .flexj{
-    justify-content: center;
     flex-wrap: wrap;
-
 }
 .categ{
     display: flex;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: center;
     flex: 1 1 50%; /* Each div takes up 50% of the row */
     box-sizing: border-box; /* Ensures padding/margins don't cause overflow */
@@ -337,9 +336,8 @@ canvas{
     justify-content: center;
     align-items: center;
   }
-  
   .card a:hover {
-    flex: 4;
+    flex: 3;
   }
   .card a span {
     min-width: 14em;
@@ -359,11 +357,56 @@ canvas{
     text-decoration: none;
 }
 .categ img{
-    width: 100px;
-    height: 100px;
+    width: 75px;
+    height: 75px;
     object-fit: cover;
     margin: 10px;
 
+}
+.categ .fade img{
+    width: 100%;
+    height: 100%;
+    max-width: 300px;
+}
+.slideshow-container {
+    position: relative;
+    max-width: 1000px;
+    margin: auto;
+}
+
+.mySlides {
+    display: none;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 20px;
+}
+
+img {
+    vertical-align: middle;
+}
+
+.fade {
+    animation-name: fade;
+    animation-duration: 3.0s;
+}
+
+@keyframes fade {
+    from {opacity: .4} 
+    to {opacity: 1}
+}
+
+.dot {
+    height: 15px;
+    width: 15px;
+    margin: 0 2px;
+    background-color: #bbb;
+    border-radius: 50%;
+    display: inline-block;
+    transition: background-color 0.6s ease;
+}
+
+.active {
+    background-color: #2c3e50;
 }
 @media screen and (max-width: 768px){
     body{
@@ -401,7 +444,7 @@ canvas{
         position: relative;
     }
     .categ, .card{
-        display: block;
+        display: inline-block;
         width: 100%;
         flex: 1 1 100%; 
     }
@@ -417,6 +460,12 @@ canvas{
     }
     .categ h2{
         margin: 0px 10px;
+    }
+    .categ .txt{
+        text-align: left;
+    }
+    .categ .fade img{
+        max-width: 200px;
     }
 }
 body.no-scroll {
