--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@ body, html{
     font-family: "Montserrat", serif;
     font-weight: 400;
     font-style: normal;
+    scroll-behavior: smooth;
 }
 .darker{
     background-color: #2c3e50;
@@ -106,6 +107,15 @@ body, html{
     align-items: center;
     text-align: center;
     font-size: 25px;
+    opacity: 0; /* Invisible by default */
+    transform: translateY(-20px); /* Move it up by default */
+    transition: opacity 0.3s ease, transform 0.3s ease; /* Transition properties */
+}
+/* Show state for dropdown menu */
+.dropdown-menu.show {
+    display: flex; /* Use flex to display the menu */
+    opacity: 1; /* Fully visible */
+    transform: translateY(0); /* Move to its original position */
 }
 .dropdown-menu ul {
     list-style-type: none;
@@ -186,8 +196,19 @@ canvas{
     outline: none;
 }
 .dropdown-content {
-    display: none;
+    display: none; /* Initially hidden */
+    opacity: 0; /* Initially invisible */
+    max-height: 0; /* Initially zero height */
+    overflow: hidden; /* Hide overflowing content */
+    transition: opacity 0.3s ease, max-height 0.3s ease; /* Smooth transitions */
 }
+/* Show state for dropdown content */
+.dropdown-content.show {
+    display: block; /* Set display to block */
+    opacity: 1; /* Fully visible */
+    max-height: 500px; /* Adjust to fit your content's maximum height */
+}
+
 .dropdown-content p {
     margin: 20px;
 }
@@ -391,12 +412,10 @@ canvas{
     animation-name: fade;
     animation-duration: 3.0s;
 }
-
 @keyframes fade {
     from {opacity: .4} 
     to {opacity: 1}
 }
-
 .dot {
     height: 15px;
     width: 15px;
@@ -406,9 +425,19 @@ canvas{
     display: inline-block;
     transition: background-color 0.6s ease;
 }
-
 .active {
     background-color: #2c3e50;
+}
+.section {
+    display: none;
+    transition: transform 0.6s ease-in-out;
+}
+.section.active {
+    background-color: #ECF0F1;
+    color: #2c3e50;
+    display: flex;
+    align-items: center;
+    padding: 25px 2%;
 }
 @media screen and (max-width: 768px){
     body{
