--- a/style.css
+++ b/style.css
@@ -348,7 +348,7 @@ canvas{
     border-radius: 2px;
     transition: all .5s;
     background: #2c3e50;
-    border: 1px solid #ECF0F1;
+    border: 2px solid #ECF0F1;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -435,6 +435,72 @@ canvas{
     align-items: center;
     padding: 25px 2%;
 }
+.dlgame{
+    text-decoration: none;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 10px 0;
+}
+.button {
+    position: relative;
+    width: 150px;
+    height: 40px;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    border: 3px solid #2c3e50;
+    background-color: #ECF0F1;
+    overflow: hidden;
+  }
+  
+  .button, .button__icon, .button__text {
+    transition: all 0.3s;
+  }
+  
+  .button .button__text {
+    transform: translateX(22px);
+    color: #2c3e50;
+    font-weight: 600;
+    font-family: "Montserrat", serif;
+  }
+  
+  .button .button__icon {
+    position: absolute;
+    transform: translateX(109px);
+    height: 100%;
+    width: 39px;
+    background-color: #2c3e50;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  
+  .button .svg {
+    width: 20px;
+    fill: #fff;
+  }
+  
+  .button:hover {
+    background: #2c3e50;
+  }
+  
+  .button:hover .button__text {
+    color: transparent;
+  }
+  
+  .button:hover .button__icon {
+    width: 148px;
+    transform: translateX(0);
+  }
+  
+  .button:active .button__icon {
+    background-color: #2c3e50;
+  }
+  
+  .button:active {
+    border: 1px solid #2c3e50;
+  }
 @media screen and (max-width: 768px){
     body{
         width: 100%;
