--- a/style.css
+++ b/style.css
@@ -81,6 +81,10 @@ body, html{
     border-bottom: 2px solid #ECF0F1; 
     padding-bottom: 5px;
 }
+.socmed {
+    display: flex;
+    align-items: center;
+}
 .socmed button {
     background: none;
     border: none;
@@ -383,7 +387,7 @@ canvas{
 .categ .fade img{
     width: 100%;
     height: 100%;
-    max-width: 300px;
+    max-width: 260px;
 }
 .categ .txt{
     text-align: left;
@@ -449,22 +453,20 @@ canvas{
     cursor: pointer;
     display: flex;
     align-items: center;
+    border-radius: 5px;
     border: 3px solid #2c3e50;
     background-color: #ECF0F1;
     overflow: hidden;
-  }
-  
+}
   .button, .button__icon, .button__text {
     transition: all 0.3s;
-  }
-  
+}
   .button .button__text {
     transform: translateX(22px);
     color: #2c3e50;
     font-weight: 600;
     font-family: "Montserrat", serif;
-  }
-  
+}
   .button .button__icon {
     position: absolute;
     transform: translateX(109px);
@@ -474,33 +476,94 @@ canvas{
     display: flex;
     align-items: center;
     justify-content: center;
-  }
-  
+}
   .button .svg {
     width: 20px;
-    fill: #fff;
-  }
+    fill: #ECF0F1;
+}
   
   .button:hover {
     background: #2c3e50;
-  }
+}
   
   .button:hover .button__text {
     color: transparent;
-  }
+}
   
   .button:hover .button__icon {
     width: 148px;
     transform: translateX(0);
-  }
-  
+}
   .button:active .button__icon {
     background-color: #2c3e50;
-  }
-  
+}
   .button:active {
     border: 1px solid #2c3e50;
-  }
+}
+.dlresume{
+    text-decoration: none;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.dlresume .button {
+    position: relative;
+    width: 150px;
+    height: 40px;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    border: 3px solid #ECF0F1;
+    background-color: #2c3e50;
+    overflow: hidden;
+    border-radius: 5px;
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    -ms-border-radius: 5px;
+    -o-border-radius: 5px;
+}
+.dlresume .button, .button__icon, .button__text {
+    transition: all 0.3s;
+}
+.dlresume .button .button__text {
+    transform: translateX(22px);
+    color: #ECF0F1;
+    font-weight: 600;
+    font-family: "Montserrat", serif;
+}
+.dlresume .button .button__icon {
+    position: absolute;
+    transform: translateX(109px);
+    height: 100%;
+    width: 39px;
+    background-color: #ECF0F1;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.dlresume .button .svg {
+    width: 20px;
+    fill: #2c3e50;
+}
+  
+.dlresume .button:hover {
+    background: #ECF0F1;
+}
+  
+.dlresume .button:hover .button__text {
+    color: transparent;
+}
+  
+.dlresume .button:hover .button__icon {
+    width: 148px;
+    transform: translateX(0);
+}
+.dlresume .button:active .button__icon {
+    background-color: #ECF0F1;
+}
+.dlresume .button:active {
+    border: 1px solid #ECF0F1;
+}
 @media screen and (max-width: 768px){
     body{
         width: 100%;
