--- a/style.css
+++ b/style.css
@@ -84,9 +84,14 @@ header{
     display: flex;
     align-items: center;
 }
-.socmed a {
+.socmed a button{
     background: none;
     border: none;
+    color: #ECF0F1;
+    cursor: pointer;
+    margin-left: 20px;
+}
+.socmed a {
     color: #ECF0F1;
     cursor: pointer;
     margin-left: 20px;
@@ -168,7 +173,7 @@ canvas{
     width: 100% !important;
     height: auto !important;
 }
-.work-experience{
+.half{
     flex-direction: column; 
     width: 50%; 
     align-items:flex-start; 
@@ -180,7 +185,7 @@ canvas{
     width: 100%;
     overflow: hidden;
 }
-.dropdown-btn {
+.ddown {
     color: #ECF0F1;
     text-align: left;
     font-size: 40px;
@@ -194,25 +199,25 @@ canvas{
     justify-content: space-between;
     font-family: "Montserrat", serif;
 }
-.dropdown-btn:focus {
+.ddown:focus {
     outline: none;
 }
-.dropdown-content {
+.ddownc {
     display: none;
     opacity: 0;
     max-height: 0;
     overflow: hidden; 
     transition: opacity 0.3s ease, max-height 0.3s ease;
 }
-.dropdown-content.show {
+.ddownc.show {
     display: block; 
     opacity: 1;
 }
 
-.dropdown-content p {
+.ddownc p {
     margin: 20px;
 }
-.dropdown-content hr {
+.ddownc hr {
     border: 1px dashed #ECF0F1;    
 }
 
@@ -225,7 +230,7 @@ canvas{
     margin-bottom: 10px; 
     margin-left: 10px;
 }
-.lighter .job .dropdown-btn{
+.lighter .job .ddown{
     background-color: #ECF0F1; 
     color: #2c3e50; 
     border-top: 1px solid #2c3e50;
@@ -339,6 +344,7 @@ hr{
     box-sizing: border-box; 
     width: 50%;
     padding: 10px 0;
+    flex-wrap: wrap;
 }
 .card {
     width: 50%;
@@ -389,7 +395,7 @@ hr{
     width: 75px;
     height: 75px;
     object-fit: cover;
-    margin: 10px 10px 0px 20px;
+    margin: 10px;
 
 }
 .categ .fade img{
@@ -415,7 +421,6 @@ hr{
     justify-content: center;
     margin-bottom: 20px;
 }
-
 .fade {
     animation-name: fade;
     animation-duration: 3.0s;
@@ -515,56 +520,20 @@ hr{
     align-items: center;
 }
 .dlresume .button {
-    position: relative;
-    width: 150px;
-    height: 40px;
-    cursor: pointer;
-    display: flex;
-    align-items: center;
     border: 3px solid #ECF0F1;
     background-color: #2c3e50;
-    overflow: hidden;
-    border-radius: 5px;
-    -webkit-border-radius: 5px;
-    -moz-border-radius: 5px;
-    -ms-border-radius: 5px;
-    -o-border-radius: 5px;
-}
-.dlresume .button, .button__icon, .button__text {
-    transition: all 0.3s;
 }
 .dlresume .button .button__text {
-    transform: translateX(22px);
     color: #ECF0F1;
-    font-weight: 600;
-    font-family: "Montserrat", serif;
 }
 .dlresume .button .button__icon {
-    position: absolute;
-    transform: translateX(109px);
-    height: 100%;
-    width: 39px;
     background-color: #ECF0F1;
-    display: flex;
-    align-items: center;
-    justify-content: center;
 }
 .dlresume .button .svg {
-    width: 20px;
     fill: #2c3e50;
 }
-  
 .dlresume .button:hover {
     background: #ECF0F1;
-}
-  
-.dlresume .button:hover .button__text {
-    color: transparent;
-}
-  
-.dlresume .button:hover .button__icon {
-    width: 148px;
-    transform: translateX(0);
 }
 .dlresume .button:active .button__icon {
     background-color: #ECF0F1;
@@ -656,7 +625,7 @@ hr{
     .darker, .lighter{
         flex-direction: column;    
     }
-    .txt, .dropdown-btn{
+    .txt, .ddown{
         font-size: 25px;
     }
     .des, .legendItem{
@@ -665,7 +634,7 @@ hr{
     .chartcon{
         width: 66.66%;
     }
-    .work-experience{
+    .half{
         width: 100%;
     }
     .title{
@@ -703,6 +672,15 @@ hr{
     }
     footer a{
         display: inline-block;
+    }
+    .lighter.flexcol a{
+        width: 250px;
+    }
+    .coninf .des{
+        width: 300px;
+    }
+    .coninf .des p{
+        text-align: center;
     }
 }
 body.no-scroll {
